Har lavet alle sider responsive til mobil størrelse og fikset nogle ting

--- a/BlazorWebsite/Components/Pages/CreateOrder.razor
+++ b/BlazorWebsite/Components/Pages/CreateOrder.razor
@@ -48,7 +48,7 @@
             </div>
         }        
         <div class="btn-container">
-            <button class="btn">Gå tilbage</button>
+            <button class="btn" @onclick="GoToMainPage">Gå tilbage</button>
             <button class="btn" @onclick="SubmitOrder">Opret ordren</button>
         </div>
     </div>
