--- a/BlazorWebsite/Components/Pages/UpdateOrder.razor.css
+++ b/BlazorWebsite/Components/Pages/UpdateOrder.razor.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
-    height: 100vh;
     flex-direction: column;
 }
 
@@ -22,11 +21,17 @@
     margin-bottom: 3%;
     padding: 15px 50px 0px 50px;
 }
-
 .input-container {
     width: 100%;
 }
-
+.top-input {
+    display: flex;
+    justify-content: space-between;
+}
+img {
+    height: 40px;
+    cursor: pointer;
+}
 .input {
     width: 100%;
     border: none;
@@ -54,4 +59,10 @@
     font-weight: bold;
     color: white;
     height: 50px;
+}
+
+@media only screen and (max-width: 770px) {
+    .foreground {
+        height: auto;
+    }
 }
