--- a/BlazorWebsite/Components/Pages/Home.razor
+++ b/BlazorWebsite/Components/Pages/Home.razor
@@ -36,7 +36,7 @@
                             <div class="bottom-container">
                                 <p>Fra @activeOrders[i].Address</p>
                                 <p>Til @activeOrders[i].Destination</p>
-                                <p>Leverings dato: @activeOrders[i].ExpirationDate.Date</p>
+                                <p>Leverings dato: @activeOrders[i].ExpirationDate.ToString("dd/MM/yyyy")</p>
                             </div>
                         </div>
                         <div class="right-info-container">
@@ -57,7 +57,10 @@
                                     <p>for @(activeOrders[i].Price) kr.- </p>
                                 </div>
                                 <div class="bottom-container">
-                                    <button class="btn" @onclick="() => GoToUpdate(activeOrders[i].Id)">Redigere ordre</button>
+                                    @{
+                                        int orderId = activeOrders[i].Id;
+                                    }
+                                    <button class="btn" @onclick="() => GoToUpdate(orderId)">Redigere ordre</button>
                                 </div>
                             }
                         </div>
