--- a/BlazorWebsite/Components/Pages/SignUp.razor
+++ b/BlazorWebsite/Components/Pages/SignUp.razor
@@ -42,7 +42,10 @@
             </div>
         }
         <div class="btn-container">
-            <button class="btn" @onclick="GoToLogIn">Gå til log in</button>
+            <div>
+                <p>Har du allerede en bruger?</p>
+                <button class="btn" @onclick="GoToLogIn">Gå til log in</button>
+            </div>
             <button class="btn" @onclick="SignUserUp">Opret konto</button>
         </div>
     </div>
