--- a/BlazorWebsite/Components/Pages/UpdateOrder.razor
+++ b/BlazorWebsite/Components/Pages/UpdateOrder.razor
@@ -65,7 +65,7 @@
         }
         <div class="btn-container">
             <button class="btn" @onclick="GoToMainPage">Gå tilbage</button>
-            <button class="btn" @onclick="SubmitChanges">Opret ordren</button>
+            <button class="btn" @onclick="SubmitChanges">Redigere ordren</button>
         </div>
     </div>
 
